# crane_x7_drake

./: .gitignore  .gitmodules  Dockerfile  README.md
crane_x7_control/: CMakeLists.txt  package.xml
crane_x7_control/launch/: crane_x7_control.launch.py
crane_x7_description/: package.xml
crane_x7_description/launch/: display.launch.py
crane_x7_description/urdf/: crane_x7.gazebo.xacro  crane_x7.gazebo_ros2_control.xacro  crane_x7_wide_two_finger_gripper.xacro
crane_x7_drake/: CMakeLists.txt  package.xml
crane_x7_gazebo/: CMakeLists.txt  package.xml
crane_x7_gazebo/config/: crane_x7_gazebo_controllers.yaml
crane_x7_gazebo/launch/: crane_x7_gazebo.launch.py
crane_x7_manipulation/: CMakeLists.txt  pick.ipynb  test.ipynb  test.py
crane_x7_manipulation/crane_x7_description/: crane_x7.urdf  stl_to_obj.py
crane_x7_manipulation/crane_x7_description/meshes/visual/: joint_cover.obj.mtl  rotating_link_type_1_fixed_part.obj.mtl  rotating_link_type_1_revolute_part.obj.mtl  rotating_link_type_2_fixed_part.obj.mtl  wide_two_finger_gripper_actuator.obj.mtl
crane_x7_manipulation/crane_x7_manipulation/: crane_x7_controller.py  crane_x7_station.py  end_effector_trajectory.py  meshcat_utils.py
crane_x7_manipulation/experiments/: test.py
crane_x7_manipulation/experiments/crane_x7_description/: CMakeLists.txt  crane_x7.urdf
crane_x7_manipulation/experiments/crane_x7_description/urdf/: crane_x7.ros2_control.xacro  crane_x7.urdf.xacro  crane_x7_arm.xacro  crane_x7_mounting_plate.xacro  crane_x7_rt_logos.xacro
crane_x7_manipulation/include/crane_x7_manipulation/: crane_x7_manipulation.hpp
crane_x7_manipulation/rsc/crane_x7_description/: crane_x7.urdf  stl_to_obj.py
crane_x7_manipulation/rsc/crane_x7_description/meshes/visual/: base_revolute_part.obj.mtl  rotating_link_type_2_revolute_part.obj.mtl  wide_two_finger_gripper_finger_b.obj.mtl  wrist.obj.mtl
crane_x7_manipulation/src/: crane_x7_manipulation.cpp
